hphp/test/zend/good/ext/intl/tests/bug60192-sort.php.expectf

Catchable fatal error: Collator not initialized in %s/bug60192-sort.php on line 11
